# JellyFrame

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_zh.md  CMakeLists.txt  COMMERCIAL.md  HOW_TO_START.md  HOW_TO_START_zh.md  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml
benchmarks/: README.md  microbench.cpp
docs/: README.md  README_zh.md  app_packaging.md  app_packaging_zh.md  css_parser_scope.md  css_parser_scope_zh.md  cssom_scope.md  cssom_scope_zh.md  developer_capability_matrix.md  developer_capability_matrix_zh.md  dom_arena_feasibility.md  dom_arena_feasibility_zh.md  embedded_app_subset.md  embedded_app_subset_zh.md  embedded_framebuffer_backend.md  embedded_framebuffer_backend_zh.md  embedded_hal_api.md  embedded_hal_api_zh.md  embedded_optimization_notes.md  embedded_optimization_notes_zh.md  engine_architecture.md  engine_architecture_zh.md  events_scope.md  events_scope_zh.md  full_pipeline_compatibility_analysis.md  full_pipeline_compatibility_analysis_zh.md  host_abstraction.md  host_abstraction_zh.md  html_parser_architecture.md  html_parser_architecture_zh.md  html_tokenizer_scope.md  html_tokenizer_scope_zh.md  html_tree_builder_scope.md  html_tree_builder_scope_zh.md  jelly_ui_design_system.md  jelly_ui_design_system_zh.md  jerryscript_integration_plan.md  jerryscript_integration_plan_zh.md  layer_tree_scope.md  layer_tree_scope_zh.md  (+22 more)
examples/: README.md  app_package.h  basic_demo.cpp  capability_check.cpp  cssom_dump.cpp  dom_dump.cpp  embedded_host_demo.cpp  example_css_io.h  font_pack_gen.cpp  layer_tree_dump.cpp  pipeline_dump.cpp  pseudo_browser.cpp  render_tree_dump.cpp  style_dump.cpp  win32_browser.cpp
examples/app_cases/: README.md  calculator.css  calculator.html  calculator.js  clock.css  clock.html  clock.js  timer.html  timer.js  watch_calculator.css  watch_calculator.html  watch_calculator.js  weather.html
examples/apps/: README.md
examples/font_cases/: README.md  tiny.bdf  tiny_chars.txt
examples/modern_cases/: article_cards.html  search_home.html
examples/script_cases/: dom_mutation_probe.css  dom_mutation_probe.html  dom_mutation_probe.js  event_probe.css  event_probe.html  inline_loading_probe.css  inline_loading_probe.js  runtime_probe.css  runtime_probe.html  runtime_probe.js
ports/: README.md
ports/embedded_host_demo/: README.md  README_zh.md  embedded_host_demo.cpp
ports/esp32s3-idf/: CMakeLists.txt  README.md  partitions.csv  partitions_16mb_n16r8.csv  qemu_psram_gradient_octal_results.csv  qemu_psram_gradient_quad_results.csv  sdkconfig.defaults  sdkconfig.n16r8_bench.defaults  sdkconfig.ws147_bringup.defaults
ports/virtual_board/: README.md  virtual_bench.cpp
presets/targets/: esp32s3-round-300.json  rect-320x240.json  round-300.json
project_docs/: README.md  README_zh.md  dom_arena_feasibility.md  esp32s3_qemu_benchmark.md  esp32s3_qemu_benchmark_zh.md  memory_management.md  memory_management_zh.md  project_status.md  project_status_zh.md  roadmap.md  roadmap_zh.md
samples/: README.md  README_zh.md
schemas/: jellyframe.app.schema.json
src/: README.md
src/app_runtime/: README.md  app_budget.cpp  app_budget.h  app_capability_broker.cpp  app_capability_broker.h  app_device_services.cpp  app_device_services.h  app_font_set.cpp  app_font_set.h  app_frame_policy.cpp  app_frame_policy.h  app_host.cpp  app_host.h  app_lifecycle.cpp  app_lifecycle.h  app_load_telemetry.cpp  app_load_telemetry.h  app_service_worker.cpp  app_service_worker.h  app_services.cpp  app_services.h  app_storage_lifecycle_policy.cpp  app_storage_lifecycle_policy.h  host_services.cpp  host_services.h  system_events.cpp  system_events.h  xml_http_request.cpp  xml_http_request.h
src/core/: README.md  arena.cpp  arena.h  bitmap_font.cpp  bitmap_font.h  budget.h  css_parser.cpp  css_parser.h  dirty_region.cpp  dirty_region.h  display_invalidation.cpp  display_invalidation.h  document_script.cpp  document_script.h  document_style.cpp  document_style.h  dom.cpp  dom.h  dom_owner.cpp  dom_owner.h  embedded_framebuffer.cpp  embedded_framebuffer.h  event.cpp  event.h  form_control.cpp  form_control.h  frame_loop.cpp  frame_loop.h  frame_update.cpp  frame_update.h  geometry.h  hit_test.cpp  hit_test.h  host.h  html_parser.cpp  html_parser.h  html_tokenizer.cpp  html_tokenizer.h  html_tree_builder.cpp  html_tree_builder.h  (+20 more)
src/render_core/: README.md  animation_invalidation.cpp  animation_invalidation.h  animation_timeline.cpp  animation_timeline.h  arena.cpp  arena.h  bitmap_font.cpp  bitmap_font.h  bitmap_font_resource.cpp  bitmap_font_resource.h  budget.h  css_parser.cpp  css_parser.h  diagnostics.h  dirty_region.cpp  dirty_region.h  display_invalidation.cpp  display_invalidation.h  document_script.cpp  document_script.h  document_style.cpp  document_style.h  dom.cpp  dom.h  dom_owner.cpp  dom_owner.h  embedded_framebuffer.cpp  embedded_framebuffer.h  event.cpp  event.h  form_control.cpp  form_control.h  frame_loop.cpp  frame_loop.h  frame_scratch.h  frame_update.cpp  frame_update.h  geometry.h  hit_test.cpp  (+34 more)
src/script/: README.md  jerryscript_runtime.cpp  jerryscript_runtime.h
templates/: README.md
templates/apps/: README.md
tests/: README.md  arena_tests.cpp  budget_stress_tests.cpp  core_tests.cpp  css_parser_tests.cpp  dirty_region_tests.cpp  display_invalidation_tests.cpp  document_script_tests.cpp  dom_mutation_tests.cpp  dom_owner_tests.cpp  embedded_framebuffer_tests.cpp  event_tests.cpp  frame_loop_tests.cpp  frame_update_tests.cpp  hit_test_tests.cpp  host_tests.cpp  input_tests.cpp  layer_tree_tests.cpp  layout_tests.cpp  pipeline_statistics_tests.cpp  render_tree_tests.cpp  script_runtime_tests.cpp  software_renderer_tests.cpp  text_adapter_tests.cpp  tokenizer_tests.cpp
tests/tool_regression/: README.md  README_zh.md  app_registry_tests.py  package_image_fixture_tests.py  package_preflight_tests.py  pipeline_visual_diagnostics_tests.py  win32_browser_cli_tests.py
tools/: README.md  app_registry.py  jellyframe_cli.py  package_app.py
tools/native/: README.md  README_zh.md  app_package.h  (+14 more)
(+215 files in other folders)
